--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -41,3 +41,14 @@ ul.projects {
     text-decoration: underline;
     margin: 0;
 }
+
+.projects li span.type {
+    font-size: .8em;
+    margin-left: 10px;
+    padding: 0px 10px;
+    border-radius: 75px;
+    background-color: var(--color2);
+    color: var(--color4);
+    float: right;
+    margin-top: -30px
+}
